--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "@tanstack/react-query": "^5.59.9",
+    "axios": "^1.7.7",
     "formik": "^2.4.6",
     "install": "^0.13.0",
     "react": "18.3.1",
